# lucid-design

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  config.toml  design-export-1784366675.html  design-export-1784371250.html  design-export-1784374164.html  design-export-1784397902.html  design-prototype-1784371246.html  design-prototype-1784374171.html  design-prototype-1784381215.html  design-prototype-1784394039.html  design-prototype-1784399003.html
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  ipc.js  kits.js  main.jsx  store.js
frontend/src/components/Canvas/: Canvas.jsx  DeviceSwitcher.jsx  Inspector.jsx  KitPickerStage.jsx  PageTabs.jsx  injectEditSupport.js
frontend/src/components/ChatPanel/: ChatPanel.jsx  CritiqueFixes.jsx  KitPicker.jsx  Message.jsx  Modal.jsx  ModeClarifyPicker.jsx  PageSuggestions.jsx  PrePagePicker.jsx
frontend/src/components/Sidebar/: ProjectsList.jsx
frontend/src/components/shell/: MetaChip.jsx  ModeBadge.jsx  StatusPill.jsx  TokenCounter.jsx  Topbar.jsx
frontend/src/hooks/: useIpcEvents.js
frontend/src/styles/: tokens.css
src/: config.rs  knowledge.rs  main.rs  pipeline.rs  projects.rs  session.rs  variants.rs
src/ai/: anthropic.rs  claudecode.rs  design_knowledge.md  gemini.rs  mod.rs  openai.rs  palettes.md  prompts.rs  themes.md  variants.md
src/ai/knowledge/: core.md  image-toolkit.md  patterns-app.md  patterns-landing.md  threejs.md
src/assets/: ui.html
src/orchestrator/: critic.rs  mod.rs  refiner.rs
src/scraper/: mod.rs
