[package]
name = "design-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
wry = "0.45"
tao = "0.30"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.20"
anyhow = "1"
regex = "1"
async-trait = "0.1"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc  = "0.2"

[patch.crates-io]
wry = { path = "/tmp/wry-patched" }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
