[package]
name = "lucid-design"
version = "0.1.3"
edition = "2021"
authors = ["Ankush Banerjee <banerjeeankush184@gmail.com>"]
description = "Native macOS design generator — pick sections from a hand-authored variant library, LLM fills copy, swap sections zero-cost."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ankush109/lucid-design"
homepage = "https://github.com/ankush109/lucid-design"
keywords = ["design", "ui", "llm", "webview", "macos"]
categories = ["gui", "development-tools"]
rust-version = "1.77"

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin"]

[dependencies]
wry = "0.55"
tao = "0.35"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.20"
anyhow = "1"
regex = "1"
async-trait = "0.1"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc  = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
